syntax = "proto3";
package common;
option go_package = "./pb";

message BaseResponse{
  int32 code = 1;
  string message = 2;
}